# retrieve-toronto-aerial-imagery

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  demo_workflow.py  examples.sh  fetch_imagery.py  pyproject.toml  requirements.txt  setup.py  test_fetch_imagery.py
