[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toronto-aerial-imagery-fetcher"
version = "1.0.0"
description = "CLI tool to fetch City of Toronto orthorectified aerial imagery from OGC WMTS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Toronto Aerial Imagery Fetcher Contributors"}
]
keywords = ["toronto", "aerial", "imagery", "wmts", "geotiff", "gis", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    "pyproj>=3.6.0",
]

[project.scripts]
fetch-toronto-imagery = "fetch_imagery:main"

[project.urls]
Homepage = "https://github.com/your-username/retrieve-toronto-aerial-imagery"
Repository = "https://github.com/your-username/retrieve-toronto-aerial-imagery"
Issues = "https://github.com/your-username/retrieve-toronto-aerial-imagery/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
